--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
   "buildCommand": "pnpm build",
   "installCommand": "pnpm install",
-  "framework": "nextjs",
-  "env": {
-    "OPENAI_API_KEY": "@openai_api_key",
-    "AWS_ACCESS_KEY_ID": "@aws_access_key_id",
-    "AWS_SECRET_ACCESS_KEY": "@aws_secret_access_key",
-    "AWS_REGION": "@aws_region"
-  }
+  "framework": "nextjs"
 }
